--- a/resume.html
+++ b/resume.html
@@ -205,15 +205,20 @@
             <hr />
 
             <h3>Skills:</h3>
-            <h4>Programming Languages: C++, JavaScript, C#</h4>
+            <h4>Programming Languages: C++, C#, JavaScript</h4>
             <h4>
-                Tools: HTML5, CSS3, Sass, Flexbox, ES6, NodeJS, ExpressJS, REST,
-                MVC framework, ReactJS, JQuery, Object-Oriented Programming,
-                Websockets (socket.io), Canvas
+                Tools/Frameworks:, Github, HTML5, CSS3, Sass, Flexbox, ES6,
+                NodeJS, ExpressJS, MVC framework, ReactJS, JQuery, Websockets
+                (socket.io), Canvas
             </h4>
             <h4>
-                Software: Unreal Engine 5, Blender, Visual Studio, VS Code,
-                Autodesk Maya, Unity
+                Concepts: Object-Oriented Programming, Agile Development,
+                Version Control, Data Structures & Algorithms, UI/UX Design,
+                RESTful-API
+            </h4>
+            <h4>
+                Software: Unreal Engine 5, Blender, Unity, Visual Studio, VS
+                Code, Autodesk Maya
             </h4>
             <hr />
 
@@ -222,21 +227,27 @@
                 <h4>Rochester Institute of Technology | Rochester, NY</h4>
                 <h5 class="eduinfo">
                     Master of Science in Game Design and Development | Expected
-                    May 2027 <br />Bachelor of Science in Game Design and
-                    Development, Immersion in Music | May 2018
+                    May 2027
+                </h5>
+                <h5 class="eduinfo">
+                    Relevant Coursework: Game Design, Game Development
+                    Processes, AI for Gameplay
+                </h5>
+                <h4>Rochester Institute of Technology | Rochester, NY</h4>
+                <h5 class="eduinfo">
+                    Bachelor of Science in Game Design and Development,
+                    Immersion in Music | May 2018
+                </h5>
+                <h5 class="eduinfo">
+                    Relevant Coursework: Game Design & Development, Data
+                    Structures & Algorithms, Level Design, 3D Animation & Asset
+                    Production, Game Graphics Programming, Game Dev & Algorithm
+                    Problem Solving, Digital Audio Production
                 </h5>
                 <h5 class="eduinfo">Overall GPA: 4.00/4.00</h5>
                 <h5 class="eduinfo">
                     Honors & Awards: Summa Cum Laude, Dean's List Fall 2014 -
                     Spring 2018
-                </h5>
-
-                <h4>
-                    Bard High School Early College Queens, Bard College | New
-                    York, NY
-                </h4>
-                <h5 class="eduinfo">
-                    Associate of Arts in Liberal Arts | June 2014
                 </h5>
             </div>
             <hr />
