updated home page description

--- a/index.html
+++ b/index.html
@@ -104,37 +104,36 @@
                 <section id="leftAboutMe" class="leftAboutMe">
                     <h3>
                         Matthew Fong <br />
-                        Game Designer & Developer
+                        Gameplay Programmer
                     </h3>
                 </section>
 
                 <section id="rightAboutMe" class="rightAboutMe">
                     <p>
-                        I graduated Rochester Institute of Technology (RIT), NY,
-                        with a
-                        <i
-                            >Bachelor of Science (BS) degree in game design and
-                            development</i
-                        >. I am currently pursuing my
+                        I am currently pursuing my
                         <i
                             >Master's of Science (MS) degree in game design and
                             development</i
                         >
-                        also at RIT, expected May 2027. Rather than game design
-                        and development, as my program covers a wide range of
-                        concepts, a better way of describing my skills and
-                        practices would be
+                        also at RIT, expected May 2027. I graduated Rochester
+                        Institute of Technology (RIT), NY, with a
+                        <i
+                            >Bachelor of Science (BS) degree in game design and
+                            development</i
+                        >. Rather than game design and development, as my
+                        program covers a wide range of concepts, a better way of
+                        describing my skills and practices would be
                         <i
                             >designing and programming rich interactive
                             experiences.</i
                         >
                         <br /><br />
 
-                        My main area of focus is gameplay programming, however,
-                        3D art and modeling is always a field that intrigues me.
-                        As a developer, I am eager to continue growing, learning
-                        new concepts and challenging myself in both aspects of
-                        game design and game development.<br /><br />
+                        My main area of focus is <b>gameplay programming</b>,
+                        however, 3D art and modeling is always a field that
+                        intrigues me. As a developer, I am eager to continue
+                        growing, learning new concepts and challenging myself in
+                        both aspects of game design and game development.<br /><br />
 
                         I have programmed in software languages such as
                         <i><b>C++, JavaScript, C#</b></i
